--- a/src/components/FooterComponents/Footer.css
+++ b/src/components/FooterComponents/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #2c3841; /* 背景色 */
     color: #fff; /* テキスト色 */
-    padding: 40px 20px; /* 上下40px、左右20pxの余白 */
+    padding: 10px 0px; /* 上下40px、左右20pxの余白 */
   }
   
   .footer-container {
@@ -12,6 +12,7 @@
   }
   
   .footer-logo {
+    margin-top: 50px;
     flex: 4; /* ロゴ部分の幅を設定 */
   }
   
@@ -23,6 +24,12 @@
   .footer-logo h3 {
     font-size: 24px;
     margin-bottom: 10px;
+  }
+
+  .footer-logo h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    padding-left:60px;
   }
   
   .footer-logo p {
@@ -58,7 +65,7 @@
   }
   
   .footer-links h4 {
-    font-size: 18px;
+    font-size: 22px;
     margin-bottom: 15px;
   }
   
@@ -74,7 +81,7 @@
   .footer-links ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 15px;
     transition: color 0.3s;
   }
   
